feat(sleep records): new end point for sleep clock out
