# swagger/v1/swagger.yaml
@@ -50,6 +50,57 @@ paths:
                 - slept_at
         '404':
           description: user not found
+  "/api/v1/users/{id}/sleep_records/{sleep_record_id}":
+    put:
+      summary: Clock out a sleep record
+      tags:
+      - Sleep Records
+      parameters:
+      - name: id
+        in: path
+        description: User ID
+        required: true
+        schema:
+          type: integer
+      - name: sleep_record_id
+        in: path
+        description: Sleep Record ID
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: sleep record updated
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 11111
+                  user_id:
+                    type: integer
+                    example: 22222
+                  slept_at:
+                    type: string
+                    format: date-time
+                  woke_at:
+                    type: string
+                    format: date-time
+                    nullable: true
+                  created_at:
+                    type: string
+                    format: date-time
+                  updated_at:
+                    type: string
+                    format: date-time
+                required:
+                - id
+                - user_id
+                - woke_at
+        '404':
+          description: user or sleep record not found
 servers:
 - url: http://{defaultHost}
   variables:
